# task_12_map_reduce

./: CMakeLists.txt  main.cpp  map_reduce.h  min_prefix.h
.github/workflows/: Release.yml
